--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "author": "kenzoengineer",
   "license": "ISC",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "dev": "concurrently \"tsc -w\" \"live-server --open=/index.html --no-css-inject\""
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1",
-    "live-server": "^1.2.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0"
   }
 }
